--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="h-full">
+  <body class="h-full bg-gradient-to-t from-gray-950 to-[#001941]">
     <app-root></app-root>
   </body>
 </html>
